Added partition-key to override shard routing